force-app/main/default/objects/RSS_Feed__c/RSS_Feed__c.object-meta.xml
<CustomObject>
    <description>Allows you to define the url and other properties of an RSS feed you would like to allow users to follow</description>
    <label>RSS Feed</label>
    <nameField>
        <label>RSS Feed</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSS Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>