force-app/main/default/objects/RSS_Feed__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The active flag indicates whether or not the feed will be read, 
this allows you to switch feeds on or off without deleting records</description>
    <inlineHelpText>The active flag indicates whether or not the feed will be read, 
this allows you to switch feeds on or off without deleting records</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>