force-app/main/default/objects/RSS_Feed__c/fields/Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync__c</fullName>
    <description>The last sync field shows the last date and time a feed post was added to this rss feed.</description>
    <inlineHelpText>The last sync field shows the last date and time a feed post was added to this rss feed.</inlineHelpText>
    <label>Last Sync</label>
    <summarizedField>RSS_Feed_Posts__c.CreatedDate</summarizedField>
    <summaryForeignKey>RSS_Feed_Posts__c.RSS_Feed__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>