force-app/main/default/objects/RSS_Feed__c/fields/Roll_Up_Posts__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Posts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Roll up posts flag determines the way in which posts are presented in your chatter feed, rss news items can be posted as individual chatter posts, or if this flag is checked then the rss news items will be posted into a single chatter feed</description>
    <inlineHelpText>The Roll up posts flag determines the way in which posts are presented in your chatter feed, rss news items can be posted as individual chatter posts, or if this flag is checked then the rss news items will be posted into a single chatter feed</inlineHelpText>
    <label>Roll Up Posts</label>
    <type>Checkbox</type>
</CustomField>